// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiAccordion behavior closes when clicked twice 1`] = `
<OuiAccordion
  arrowDisplay="left"
  id="13"
  initialIsOpen={false}
  isLoading={false}
  isLoadingMessage={false}
  paddingSize="none"
>
  <div
    className="ouiAccordion"
  >
    <div
      className="ouiAccordion__triggerWrapper"
    >
      <button
        aria-controls="13"
        aria-expanded={false}
        className="ouiAccordion__button"
        id="generated-id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="ouiAccordion__iconWrapper"
        >
          <OuiIcon
            className="ouiAccordion__icon"
            size="m"
            type="arrowRight"
          >
            <span
              className="ouiAccordion__icon"
              data-ouiicon-type="arrowRight"
              size="m"
            />
          </OuiIcon>
        </span>
        <span
          className="ouiIEFlexWrapFix"
        />
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      className="ouiAccordion__childWrapper"
      id="13"
      role="region"
      tabIndex={-1}
    >
      <OuiResizeObserver
        onResize={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </OuiResizeObserver>
    </div>
  </div>
</OuiAccordion>
`;

exports[`OuiAccordion behavior opens when clicked once 1`] = `
<OuiAccordion
  arrowDisplay="left"
  id="12"
  initialIsOpen={false}
  isLoading={false}
  isLoadingMessage={false}
  paddingSize="none"
>
  <div
    className="ouiAccordion ouiAccordion-isOpen"
  >
    <div
      className="ouiAccordion__triggerWrapper"
    >
      <button
        aria-controls="12"
        aria-expanded={true}
        className="ouiAccordion__button"
        id="generated-id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="ouiAccordion__iconWrapper"
        >
          <OuiIcon
            className="ouiAccordion__icon ouiAccordion__icon-isOpen"
            size="m"
            type="arrowRight"
          >
            <span
              className="ouiAccordion__icon ouiAccordion__icon-isOpen"
              data-ouiicon-type="arrowRight"
              size="m"
            />
          </OuiIcon>
        </span>
        <span
          className="ouiIEFlexWrapFix"
        />
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      className="ouiAccordion__childWrapper"
      id="12"
      role="region"
      tabIndex={-1}
    >
      <OuiResizeObserver
        onResize={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </OuiResizeObserver>
    </div>
  </div>
</OuiAccordion>
`;

exports[`OuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiAccordion testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="0"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props arrowDisplay none is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="7"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="7"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props arrowDisplay right is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="6"
      aria-expanded="false"
      class="ouiAccordion__button ouiAccordion__buttonReverse"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="6"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props buttonContent is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="2"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      >
        <div>
          Button content
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="2"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="1"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix button content class name"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="1"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props buttonProps is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="3"
      aria-expanded="false"
      aria-label="aria-label"
      class="ouiAccordion__button testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="3"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props extraAction is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="4"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
    <div
      class="ouiAccordion__optionalAction"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="4"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props forceState is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="8"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="8"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can not see me
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="ouiAccordion ouiAccordion-isOpen"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="5"
      aria-expanded="true"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon ouiAccordion__icon-isOpen"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="5"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props isLoading is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="10"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
    <div
      class="ouiAccordion__optionalAction"
    >
      <span
        class="ouiLoadingSpinner ouiLoadingSpinner--medium"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="10"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="ouiAccordion__children-isLoading"
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiAccordion props isLoadingMessage is rendered 1`] = `
<div
  class="ouiAccordion"
>
  <div
    class="ouiAccordion__triggerWrapper"
  >
    <button
      aria-controls="11"
      aria-expanded="false"
      class="ouiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiAccordion__iconWrapper"
      >
        <span
          class="ouiAccordion__icon"
          data-ouiicon-type="arrowRight"
        />
      </span>
      <span
        class="ouiIEFlexWrapFix"
      />
    </button>
    <div
      class="ouiAccordion__optionalAction"
    >
      <span
        class="ouiLoadingSpinner ouiLoadingSpinner--medium"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="ouiAccordion__childWrapper"
    id="11"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="ouiAccordion__children-isLoading"
      >
        <span
          class="ouiLoadingSpinner ouiLoadingSpinner--medium ouiAccordion__spinner"
        />
        <span>
          Please wait
        </span>
      </div>
    </div>
  </div>
</div>
`;
